[package]
name = "terraform-forge"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Terraform provider code generator from OpenAPI specs"
homepage = "https://github.com/pleme-io/terraform-forge"
repository = "https://github.com/pleme-io/terraform-forge"
documentation = "https://docs.rs/terraform-forge"
readme = "README.md"
license = "MIT"
categories = ["development-tools", "code-generators"]
keywords = ["terraform", "codegen", "openapi", "provider"]

[lints.clippy]
pedantic = "warn"

[dependencies]
iac-forge = { git = "https://github.com/pleme-io/iac-forge" }
openapi-forge = { git = "https://github.com/pleme-io/openapi-forge" }
heck = "0.5"
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
